--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "ts-node --transpile-only src/main.ts"
   },
   "dependencies": {
+    "@types/mime-types": "^2.1.1",
+    "mime-types": "^2.1.35",
     "qrcode-terminal": "^0.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
