--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@types/mime-types": "^2.1.1",
+    "chatgpt": "^5.2.5",
+    "dotenv": "^16.3.1",
     "mime-types": "^2.1.35",
     "qrcode-terminal": "^0.12.0",
     "ts-node": "^10.9.1",
