--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "dotenv": "^16.3.1",
     "mime-types": "^2.1.35",
     "qrcode-terminal": "^0.12.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
     "whatsapp-web.js": "^1.22.1"
   },
   "devDependencies": {
-    "@types/qrcode-terminal": "^0.12.0"
+    "@types/qrcode-terminal": "^0.12.0",
+    "typescript": "^5.1.6",
+    "ts-node": "^10.9.1"
   }
 }
