--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "chatgpt": "^5.2.5",
     "dotenv": "^16.3.1",
     "mime-types": "^2.1.35",
+    "openai": "^4.10.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.22.1"
   },
   "devDependencies": {
     "@types/qrcode-terminal": "^0.12.0",
-    "typescript": "^5.1.6",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
