--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mime-types": "^2.1.35",
     "openai": "^4.10.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_8"
+    "whatsapp-web.js": "^1.22.1"
   },
   "devDependencies": {
     "@types/qrcode-terminal": "^0.12.0",
