--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mime-types": "^2.1.35",
     "openai": "^4.10.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.22.1"
+    "whatsapp-web.js": "^1.22.1",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@types/qrcode-terminal": "^0.12.0",
