--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc --project .",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "dev": "vite-node src/main.ts"
   },
   "type": "module",
   "dependencies": {
     "@prisma/client": "5.2.0",
     "@types/mime-types": "^2.1.1",
     "chatgpt": "^5.2.5",
+    "chokidar": "^3.5.3",
     "dotenv": "^16.3.1",
     "mime-types": "^2.1.35",
     "openai": "^4.10.0",
@@ -22,7 +24,7 @@
   "devDependencies": {
     "@types/qrcode-terminal": "^0.12.0",
     "prisma": "^5.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite-node": "^0.34.6"
   }
 }
